--- a/22-12-23.md
+++ b/22-12-23.md
@@ -34,7 +34,7 @@
 + 假如第一次握手可以携带数据，如果有人要恶意攻击服务器，那他每次都在第一次握手中的 SYN 报文中放入大量的数据，攻击者根本就不需要管服务器的接收、发送能力是否正常，疯狂着重复发 SYN 报文，这就会让服务器花费很多时间、内存空间来接收这些报文。所以第一次握手可以放数据的话，会让服务器更加容易受到攻击了。
 + 而对于第三次的话，此时客户端已经处于 established 状态，也就是说，对于客户端来说，他已经建立起连接了，并且也已经知道服务器的接收、发送能力是正常的了，所以能携带数据页没啥毛病。
 
-## 2、为什么需要四次握手？三次不行？
+## 2、为什么需要四次挥手？三次不行？
 
 + 刚开始双方都处于 establised 状态，假如是客户端先发起关闭请求，则：
 
