--- a/22-12-26.md
+++ b/22-12-26.md
@@ -2,11 +2,15 @@
 
 ## 1. 哈希索引时间复杂度，为什么会失去有序性
 
+
+
 ## 2.索引优化的方法有哪几种？
+
+
 
 ## 3.讲讲分布式锁
 
-
+(Redis内容)
 
 ## 4.我们能将 int强制转换为byte 类型的变量么？如果该值大于byte类型的范围，将会出现什么现象？
 
