--- a/一些细节问题.md
+++ b/一些细节问题.md
@@ -79,9 +79,19 @@
 
 # MSL 多层交换 （Multilayer Switching Protocol）
 
-指的是交换机能通过硬件来交换和路由选择数据包，并可能通过硬件支持4~7层交换。通过硬件进行交换和路由时，即使所有的端口同时发送信息流，吞吐量也可达到或接近线速。
-
 MSL(Maximum Segment Lifetime)报文最长存活时间
+
+# 程序、进程、线程
+
+一个程序打开之后就是一个进程，此时操作系统会给进程分配空间，在这个进程里面，会执行线程。
+
+一个进程有多个线程，例如，使用迅雷同时下载5个文件。
+
+# 并发、并行
+
+并发：同一时刻，多个任务交替执行，造成一种”貌似同时“的错觉，简单地说，单核CPU实现的多个任务就是并发。例如，开车时打电话，大脑既处理开车的行为，同时处理打电话的行为。
+
+并行：同一个时刻，多个任务同时执行。多核cpu可以实现并行
 
 
 
